[package]
name = "piston-example-freetype"
version = "0.0.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = []

[[bin]]
name = "piston-example-freetype"
path = "src/main.rs"

[dependencies]
piston = "0.42.0"
piston_window = "0.89.0"
freetype-rs = "0.19.0"
find_folder = "0.3.0"
gfx_device_gl = "0.15.0"
